# cropland-driven-deforestation

./: README.md  pyproject.toml
configs/: config.yaml
notebooks/: eda.ipynb
scripts/: export_datasets.py  set_gee.py
scripts/js/: download_crop_deforestation_data.js  download_deforestation_data.js
src/: config.py  download.py
